# CellQuest

./: .env  .env.example  docker-compose.yml  dockerfile  pyproject.toml
cell_quests/: main.py
cell_quests/app/: __init__.py
cell_quests/app/use_cases/: __init__.py  authenticate.py  get_alternatives.py  get_questions.py  get_scoreboard.py  save_score.py
cell_quests/core/: logger.py
cell_quests/core/database/: __init__.py  connector.py
cell_quests/core/window/: __init__.py  app.py
cell_quests/public/: seed.sql
